src/objects/Event_Request__c.object
<CustomObject>
    <description>Object will hold data of all integration requests made through the system, e.g., a CBR request on an application will generate a record in this object with a status and time stamp.</description>
    <fields>
        <fullName>Application_Number__c</fullName>
        <label>Application Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Decline_Reason__c</fullName>
        <label>Auto Decline Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Message__c</fullName>
        <label>Log Message</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>Date and time request was submitted</description>
        <inlineHelpText>Date and time request was submitted</inlineHelpText>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SObject_ID__c</fullName>
        <label>SObject ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <label>SObject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order CBR</fullName>
                </value>
                <value>
                    <fullName>Submit CBR</fullName>
                </value>
                <value>
                    <fullName>Received CBR</fullName>
                </value>
                <value>
                    <fullName>Received CBR Deduped</fullName>
                </value>
                <value>
                    <fullName>Received Re-Order CBR</fullName>
                </value>
                <value>
                    <fullName>Order FEMA</fullName>
                </value>
                <value>
                    <fullName>Order Loan History</fullName>
                </value>
                <value>
                    <fullName>OrderIRS</fullName>
                </value>
                <value>
                    <fullName>Submit Auto Decline</fullName>
                </value>
                <value>
                    <fullName>Sent Auto Decline</fullName>
                </value>
                <value>
                    <fullName>Receive Loan History</fullName>
                </value>
                <value>
                    <fullName>Submit ETRAN OBL</fullName>
                </value>
                <value>
                    <fullName>Received IRS</fullName>
                </value>
                <value>
                    <fullName>Document Received</fullName>
                </value>
                <value>
                    <fullName>Order Flood Mapping</fullName>
                </value>
                <value>
                    <fullName>Received Flood Mapping</fullName>
                </value>
                <value>
                    <fullName>Order LV Inspection</fullName>
                </value>
                <value>
                    <fullName>Received LV Inspection</fullName>
                </value>
                <value>
                    <fullName>Order Loan History ReRun</fullName>
                </value>
                <value>
                    <fullName>Order Other Assistance ReRun</fullName>
                </value>
                <value>
                    <fullName>Received Loan History ReRun</fullName>
                </value>
                <value>
                    <fullName>Received Other Assistance ReRun</fullName>
                </value>
                <value>
                    <fullName>Order Disbursement</fullName>
                </value>
                <value>
                    <fullName>Loan Disbursed</fullName>
                </value>
                <value>
                    <fullName>Loan Obligated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Event request status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Awaiting interface data</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Number__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Log_Message__c</columns>
        <columns>SObject_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>